--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
     <head>
         <meta property="og:title" content="AfteWork - Serveur PVP-Faction" />
         <meta property="og:type" content="website" />
-        <meta property="og:image" content="" />
+        <meta property="og:image" content="https://media.discordapp.net/attachments/1027236734104240204/1028264740599898172/308580558_1742931312730916_49104465965165329_n.png" />
+        <meta property="og:og:description" content="Site en développement" />
         <meta property="og:url" content="https://aftework.ml/" />
         <title>AfteWork - Serveur PVP-Faction</title>
     </head>
