--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
         <title>AfteWork - Serveur PVP-Faction</title>
     </head>
     <body>
-        SOON...
+        <label for="file">site creation progress:</label>
+
+        <progress id="file" max="100" value="5"> 5% </progress>
     </body>
 </html>
