--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <body>
         <label for="file">site creation progress:</label>
 
-        <progress id="file" max="100" value="5"> 5% </progress>
+        <progress id="file" max="100" value="5"> 5% </progress> 5%
     </body>
 </html>
