--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
         <meta property="og:image" content="https://media.discordapp.net/attachments/1027236734104240204/1028264740599898172/308580558_1742931312730916_49104465965165329_n.png" />
         <meta property="og:url" content="https://aftework.ml/" />
         <meta property="og:description" content="Site en développement...." />
-        <title>AfteWork - Serveur PVP-Faction</title>
+        <title>AfteWork - site en développement</title>
     </head>
     <body>
         <label for="file">site creation progress:</label>
 
-        <progress id="file" max="100" value="5"> 5% </progress> 5%
+        <progress id="file" max="100" value="30"> 30% </progress> 30%
     </body>
 </html>
