finalisation de la création de l'accueil

--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <html>
     <head>
-        <meta property="og:title" content="AfteWork - Serveur PVP-Faction" />
+        <meta property="og:title" content="AfteWork - Serveur Minecraft" />
         <meta property="og:type" content="website" />
         <meta property="og:image" content="https://media.discordapp.net/attachments/1027236734104240204/1028264740599898172/308580558_1742931312730916_49104465965165329_n.png" />
         <meta property="og:url" content="https://aftework.ml/" />
         <meta property="og:description" content="Site en développement...." />
         <title>AfteWork - site en développement</title>
+        <link rel="icon" href="/assets/big_logo.png">
     </head>
     <body>
         <label for="file">site creation progress:</label>
 
-        <progress id="file" max="100" value="30"> 30% </progress> 30%
+        <progress id="file" max="100" value="31"> 31% </progress> 31%
     </body>
 </html>
