--- a/index1.html
+++ b/index1.html
@@ -1,13 +1,18 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta property="og:title" content="AfteWork" />
+        <meta property="og:title" content="AfteWork - Serveur Minecraft" />
         <meta property="og:type" content="website" />
         <meta property="og:image" content="/assets/logo.png" />
-        <meta property="og:url" content="https://aftework.ml/" />
-        <meta property="og:description" content="Serveur PVP-Faction, versions : 1.8 à 1.18, IP : aftework.omgcraft.fr" />
+        <meta property="og:url" content="https://aftework.ml/index1.html" />
+        <meta property="og:description" content="Serveur PVP-Faction" />
+        <meta property="og:description" content="Versions : 1.8 à 1.18" />
+        <meta property="og:description" content="IP : aftework.omgcraft.fr" />
+        <meta property="og:description" content="- Un serveur minecraft ouvert à tout joueur, crack ou premium" />
+        <meta property="og:description" content="- Un staff actif, au petit soin avec ses membres, étant encore en recrutement de modérateur et plus !" />
+        <meta property="og:description" content="- Un site contenant une boutique où vous pouvez acheter des grades, des clés et bien plus…" />
         <title>AfteWork - Serveur PVP-Faction</title>
-        <link rel="icon" type="image/png" href="/assets/logo.png">
+        <link rel="icon" href="/assets/big_logo.png">
         <link rel="stylesheet" href="/style.css">
     </head>
     <body>
@@ -17,7 +22,6 @@
                 <h1>AfteWork</h1>
             </div>
             <div class="toggle">
-                <p>dark mode : </p>
                 <input type="checkbox" id="toggle" />
                 <label for="toggle"></label>
             </div>
@@ -51,7 +55,7 @@
 
         <footer>
             <hr size="4" align="center" noshade="noshade" \>
-            <p align="center">&copy AfteWork - [MAIL]</p>
+            <p align="center">AfteWork - [MAIL]</p>
         </footer>
 
         <script>
