ajustement de l'embed discord

--- a/index1.html
+++ b/index1.html
@@ -5,12 +5,7 @@
         <meta property="og:type" content="website" />
         <meta property="og:image" content="/assets/logo.png" />
         <meta property="og:url" content="https://aftework.ml/index1.html" />
-        <meta property="og:description" content="Serveur PVP-Faction" />
-        <meta property="og:description" content="Versions : 1.8 à 1.18" />
-        <meta property="og:description" content="IP : aftework.omgcraft.fr" />
-        <meta property="og:description" content="- Un serveur minecraft ouvert à tout joueur, crack ou premium" />
-        <meta property="og:description" content="- Un staff actif, au petit soin avec ses membres, étant encore en recrutement de modérateur et plus !" />
-        <meta property="og:description" content="- Un site contenant une boutique où vous pouvez acheter des grades, des clés et bien plus…" />
+        <meta property="og:description" content="Serveur PVP-Faction, Versions : 1.8 à 1.18, IP : aftework.omgcraft.fr" />
         <title>AfteWork - Serveur PVP-Faction</title>
         <link rel="icon" href="/assets/big_logo.png">
         <link rel="stylesheet" href="/style.css">
