modifications et ajustements

--- a/rules/index.html
+++ b/rules/index.html
@@ -6,9 +6,9 @@
         <meta property="og:image" content="/assets/logo.png" />
         <meta property="og:url" content="https://aftework.ml/index1.html" />
         <meta property="og:description" content="aftework.omgcraft.fr, 1.8 à 1.19" />
-        <title>AfteWork - Serveur PVP-Faction</title>
+        <title>AfteWork - Règles du serveur</title>
         <link rel="icon" href="/assets/big_logo.png">
-        <link rel="stylesheet" href="/style.css">
+        <link rel="stylesheet" href="/rules/style.css">
     </head>
     <body>
         <nav>
@@ -21,14 +21,12 @@
                 <label for="toggle"></label>
             </div>
             <div class="onglets">
-                <a href="//aftework.ml" class="actual">Accueil</a>
-                <a href="/rules/">Règles</a>
+                <a href="//aftework.ml">Accueil</a>
+                <a href="/rules/" class="actual">Règles</a>
                 <a href="/blog/">Blog</a>
                 <a href="/play/">Jouer</a>
             </div>
         </nav>
-
-        <p align="center" class="titleArticles">Derniers posts publiés :</p>
   
         <section class="articles">
             <div class="article">
