--- a/404.html
+++ b/404.html
@@ -4,13 +4,13 @@
 
 <head>
 
-  <link id="favicon" rel="icon" href="../assets/demi-dalle.png" type="image/x-icon">
+  <link id="favicon" rel="icon" href="/assets/big_logo.png" type="image/x-icon">
 
 	<meta charset="UTF-8">
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<title>Demi Dalle | Erreur 404</title>
+	<title>AfteWork - 404 Introuvable</title>
 
 	<link rel="stylesheet" href="/404style.css">
 
@@ -30,7 +30,7 @@
 
 	<div class="link-container">
 
- 		<a href="/index.html" class="more-link">Retour à l'accueil</a>
+ 		<a href="//aftework.ml" class="more-link">Retour à l'accueil</a>
 
 	</div>
 
