--- a/rules/index.html
+++ b/rules/index.html
@@ -23,6 +23,7 @@
             <div class="onglets">
                 <a href="//aftework.ml">Accueil</a>
                 <a href="/rules/" class="actual">Règles</a>
+                <a href="/informations/">Informations</a>
                 <a href="/play/">Jouer</a>
             </div>
         </nav>
@@ -33,7 +34,20 @@
                 <div class="right">
                     <p class="date">Date de mise à jour des règles : 08/10/2022</p>
                     
-                    <h1>Création du site</h1>
+                    <h1>Règles du serveur</h1>
+                    <p class="description">1.0 Respectez toute personne se trouvant sur le serveur Minecraft &/ou Discord, c’est un lieu pour s’amuser et s’entraider, et non l’inverse !</p>
+                    <p class="description">1.1 Les Doubles comptes sont strictement interdit et sanctionnable d’un tempban d’1 jour, et ban à vie si celui ou celle-ci vient à l’utiliser de nouveau.</p>
+                    <p class="description">1.2 Les insultes, que ce soit pour rigoler ou non, sont interdites, sous toutes formes, sanctionnable d’un warn et d’un mute selon la gravité et le nombre de fois que le Staff vous reprends.</p>
+                    <p class="description">1.3 Tout type de cheat/triche ( reach, x-ray, plus de 13cps, deco combat, skin interdit… ) sont sanctionnable d’un ban temp allant à un ban définitif selon la gravité.</p>
+                    <hr size="3" align="center" noshade="noshade" width="90%" \>
+                    <p class="description">2.0 Si une personne vous demande des informations qui ne la concerne pas, qui vous harcèle ou un quelconque acte de ce genre, veuillez vous dirigez immédiatement vers le staff et établissez une plainte sur notre discord.</p>
+                    <p class="description">2.1 Si vous avez du mal avec les commandes de discord, le bot Draftbot vous guidera si nécessaire, en faisant la commande !help, vous aurez en plus des commandes de bases, des commandes créées par le staff, concernant le serveur ( In-Game ).</p>
+                    <p class="description">2.2 Le spamm sur discord & minecraft sont sanctionnable après un certain nombre de messages/emojis, d’un warn allant à un mute.</p>
+                    <p class="description">2.3 Ne divulguez sous aucuns prétextes vos informations personnelles tels que vos mot de passe et autres, pour votre bien, et celui du serveur lui même.</p>
+                    <hr size="3" align="center" noshade="noshade" width="90%" \>
+                    <p class="description">3.0 Si vous découvrez un but sur discord ou sur le serveur Minecraft, ouvrez un ticket ‘support’ et détaillé le plus possible le bug trouver afin d’éclairer celui-ci et s’en occuper dans les plus brèves délais.</p>
+                    <p class="description">3.1 Respectez le thème des différents salons présents, comme le salon <a href="https://discord.com/channels/1027236733252816896/1027236734104240198">『📃』𝐑𝐞𝐜𝐫𝐮𝐭𝐞𝐦𝐞𝐧𝐭 </a>.</p>
+                    <p class="description"></p>
                     <p class="description"></p>
                 </div>
                     
