halloween mode et ajustements

--- a/informations/index.html
+++ b/informations/index.html
@@ -7,13 +7,13 @@
         <meta property="og:url" content="https://aftework.ml/index1.html" />
         <meta property="og:description" content="aftework.omgcraft.fr, 1.8 à 1.19" />
         <title>AfteWork - iNFORMATIONS</title>
-        <link rel="icon" href="/assets/big_logo.png">
+        <link rel="icon" href="/assets/halloween_logo.png">
         <link rel="stylesheet" href="/informations/style.css">
     </head>
     <body>
         <nav>
             <div class="titre">
-                <img src="/assets/logo.png">
+                <img src="/assets/halloween_logo.png">
                 <h1>AfteWork</h1>
             </div>
             <div class="toggle">
@@ -21,9 +21,9 @@
                 <label for="toggle"></label>
             </div>
             <div class="onglets">
-                <a href="//aftework.ml" class="actual">Accueil</a>
+                <a href="//aftework.ml">Accueil</a>
                 <a href="/rules/">Règles</a>
-                <a href="/informations/">Informations</a>
+                <a href="/informations/" class="actual">Informations</a>
                 <a href="/play/">Jouer</a>
             </div>
         </nav>
