--- a/rules/index.html
+++ b/rules/index.html
@@ -7,13 +7,13 @@
         <meta property="og:url" content="https://aftework.ml/index1.html" />
         <meta property="og:description" content="aftework.omgcraft.fr, 1.8 à 1.19" />
         <title>AfteWork - Règles du serveur</title>
-        <link rel="icon" href="/assets/big_logo.png">
+        <link rel="icon" href="/assets/halloween_logo.png">
         <link rel="stylesheet" href="/rules/style.css">
     </head>
     <body>
         <nav>
             <div class="titre">
-                <img src="/assets/logo.png">
+                <img src="/assets/halloween_logo.png">
                 <h1>AfteWork</h1>
             </div>
             <div class="toggle">
@@ -47,8 +47,7 @@
                     <hr size="3" align="center" noshade="noshade" width="90%" \>
                     <p class="description">3.0 Si vous découvrez un but sur discord ou sur le serveur Minecraft, ouvrez un ticket ‘support’ et détaillé le plus possible le bug trouver afin d’éclairer celui-ci et s’en occuper dans les plus brèves délais.</p>
                     <p class="description">3.1 Respectez le thème des différents salons présents, comme le salon <a href="https://discord.com/channels/1027236733252816896/1027236734104240198">『📃』𝐑𝐞𝐜𝐫𝐮𝐭𝐞𝐦𝐞𝐧𝐭 </a>.</p>
-                    <p class="description"></p>
-                    <p class="description"></p>
+                    
                 </div>
                     
             </div>
