--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
 
 <head>
 
-  <link id="favicon" rel="icon" href="/assets/big_logo.png" type="image/x-icon">
+  <link id="favicon" rel="icon" href="/assets/halloween_logo.png" type="image/x-icon">
 
 	<meta charset="UTF-8">
 
