--- a/play/index.html
+++ b/play/index.html
@@ -7,13 +7,13 @@
         <meta property="og:url" content="https://aftework.ml/index1.html" />
         <meta property="og:description" content="aftework.omgcraft.fr, 1.8 à 1.19" />
         <title>AfteWork - Rejoindre le serveur</title>
-        <link rel="icon" href="/assets/big_logo.png">
+        <link rel="icon" href="/assets/halloween_logo.png">
         <link rel="stylesheet" href="/rules/style.css">
     </head>
     <body>
         <nav>
             <div class="titre">
-                <img src="/assets/logo.png">
+                <img src="/assets/halloween_logo.png">
                 <h1>AfteWork</h1>
             </div>
             <div class="toggle">
