Changement de l'ip du serveur

--- a/informations/index.html
+++ b/informations/index.html
@@ -4,8 +4,8 @@
         <meta property="og:title" content="AfteWork - Serveur PVP-Faction" />
         <meta property="og:type" content="website" />
         <meta property="og:image" content="/assets/logo.png" />
-        <meta property="og:url" content="https://aftework.ml/index1.html" />
-        <meta property="og:description" content="aftework.omgcraft.fr, 1.8 à 1.19" />
+        <meta property="og:url" content="https://aftework.ml/index.html" />
+        <meta property="og:description" content="aftework.mine.fun, 1.8 à 1.19" />
         <title>AfteWork - iNFORMATIONS</title>
         <link rel="icon" href="/assets/halloween_logo.png">
         <link rel="stylesheet" href="/informations/style.css">
