--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta property="og:type" content="website" />
         <meta property="og:image" content="/assets/logo.png" />
         <meta property="og:url" content="https://aftework.ml/index.html" />
-        <meta property="og:description" content="aftework.mine.fun, 1.8 à 1.19" />
+        <meta property="og:description" content="play.aftework.ml, 1.8.6 à 1.14.x" />
         <title>AfteWork - Serveur PVP-Faction</title>
         <link rel="icon" href="/assets/halloween_logo.png">
         <link rel="stylesheet" href="/style.css">
