--- a/play/index.html
+++ b/play/index.html
@@ -5,7 +5,7 @@
         <meta property="og:type" content="website" />
         <meta property="og:image" content="/assets/logo.png" />
         <meta property="og:url" content="https://aftework.ml/index.html" />
-        <meta property="og:description" content="aftework.mine.fun, 1.8 à 1.19" />
+        <meta property="og:description" content="play.aftework.ml, 1.8.6 à 1.14.x" />
         <title>AfteWork - Rejoindre le serveur</title>
         <link rel="icon" href="/assets/halloween_logo.png">
         <link rel="stylesheet" href="/rules/style.css">
@@ -33,8 +33,8 @@
                     
                 <div class="right">
                     <h1>Rejoindre le Serveur minecraft :</h1>
-                    <p class="description">IP : aftework.mine.fun</p>
-                    <p class="description">Versions : 1.8.x - 1.16.x</p>
+                    <p class="description">IP : play.aftework.ml</p>
+                    <p class="description">Versions : 1.8.6 - 1.14.x</p>
                 </div>
                     
             </div>
