--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     
                     <a href="/play/"><h1>Venez Jouer avec nous !</h1></a>
                     <p class="description">Cliquez sur le titre, On se retrouve en jeu !</p>
-                    <p class="auteur">DankBroom228555</p>
+                    <p class="auteur">Staff AfteWork</p>
                 </div>
                     
             </div>
