Mise à jour du panel admin

--- a/admin/index.html
+++ b/admin/index.html
@@ -10,6 +10,7 @@
         <link rel="icon" href="/assets/halloween_logo.png">
     </head>
     <body>
-        <a href="/admin/transcripts/">Transcripts</a>
+        <p align="right"><a href="/admin/">Acceuil admin</a>  <a href="//aftework.ml/">Acceuil site</a></p>
+        <p><a href="/admin/transcripts/">Transcripts</a></p>
     </body>
 </html>
